tests/precess-tests/expectations/fail/empty.typ.expectation
#Equal
There are no more tokens left to parse